# pyfr24

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  PUBLISH.md  README.md  example.py  example2.py  example_multiple.py  mkdocs.yml  planning.md  publish.sh  pyfr24-cli  pyproject.toml  requirements-test.txt  run_tests.py  setup.py  test_flight_summary.py  update_version.py
.github/workflows/: publish.yml  test.yml
39c4d15e/: data.csv  line.geojson  points.geojson
data/: investigation_results.json
data/39a8364d/: data.csv  line.geojson
data/AA5308_39a8f107/: data.csv  line.geojson  points.geojson
data/AA5308_39a9460a/: data.csv  line.geojson  points.geojson
data/DL2983_39a84c3c/: data.csv  line.geojson  points.geojson
data/DL2983_39a8eb06/: data.csv  line.geojson  points.geojson
data/DO61_39a8364d/: points.geojson
data/flight_39bebe6e/: data.csv  line.geojson  points.geojson
docs/: STYLE.md  changelog.md  conf.py  contributing.md  index.md  installation.md  requirements.txt
docs/changelog/: index.md
docs/contributing/: version-checklist.md
docs/css/: extra.css
docs/features/: data-export.md  enhanced-visualizations.md  flight-data.md  map-visualization.md
docs/images/: flight_identifiers.md
docs/reference/: cli.md  client.md  exceptions.md
docs/usage/: api.md  cli.md  examples.md  quickstart.md
pyfr24/: __init__.py  cli.py  client.py  exceptions.py  logging.py
tests/: __init__.py  run_tests.py  test_client.py  test_exceptions.py  test_flight_summary.py  test_logging.py
